--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/Hello World,Qiaogao!"
+        android:textSize="50sp"
          />
     
 </RelativeLayout>
