引用res/values/string.xml下的hello_world字符串。

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,8 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/Hello World,Qiaogao!"
+        android:text="@string/hello_world"
         android:textSize="50sp"
+        android:background="#aaaaaa"
          />
     
 </RelativeLayout>
