--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,11 +7,14 @@
     tools:ignore="MergeRootFrame" >
     
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_world"
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:textSize="50sp"
-        android:background="#aaaaaa"
+        android:background="#aa77aa"
+        android:text="继续测试"
          />
     
 </RelativeLayout>
