--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,20 +1,25 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.qiaogaohhb.qiaogao.MainActivity"
     tools:ignore="MergeRootFrame" >
     
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
         android:textSize="50sp"
         android:background="#aa77aa"
-        android:text="继续测试"
+        android:text="0"
          />
+    <Button 
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="button"
+        />
     
-</RelativeLayout>
+</LinearLayout>
